--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-lightbox-component": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "simple-react-lightbox": "^3.6.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
