--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "simple-react-lightbox": "^3.6.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
